Prevent post content from overflowing posts.

--- a/css/app/seagl.css
+++ b/css/app/seagl.css
@@ -110,6 +110,9 @@ strong {
 .lead {
   line-height: 44px;
 }
+.post {
+  overflow-y: hidden; /* Contain floating images. */
+}
 .well {
   background-color: #FCB320;
   color: #fff;
